# buildbuddy-toolchain

./: .gitignore  BUILD  MODULE.bazel  extensions.bzl
examples/bzlmod/: .bazelrc  MODULE.bazel
templates/: BUILD.tpl
